# api/docs/swagger.json
@@ -1305,9 +1305,6 @@
                 },
                 "title": {
                     "type": "string"
-                },
-                "user_id": {
-                    "type": "integer"
                 }
             }
         },
@@ -1354,9 +1351,6 @@
                 },
                 "post_id": {
                     "type": "integer"
-                },
-                "user_id": {
-                    "type": "integer"
                 }
             }
         },
@@ -1391,9 +1385,6 @@
                 },
                 "title": {
                     "type": "string"
-                },
-                "user_id": {
-                    "type": "integer"
                 }
             }
         },
@@ -1442,7 +1433,6 @@
                     "type": "string",
                     "enum": [
                         "user",
-                        "admin",
                         "superadmin"
                     ]
                 },
@@ -1671,9 +1661,6 @@
             "properties": {
                 "description": {
                     "type": "string"
-                },
-                "user_id": {
-                    "type": "integer"
                 }
             }
         },
@@ -1733,6 +1720,13 @@
         },
         "models.User": {
             "type": "object",
+            "required": [
+                "email",
+                "first_name",
+                "last_name",
+                "password",
+                "type"
+            ],
             "properties": {
                 "created_at": {
                     "type": "string"
@@ -1741,19 +1735,29 @@
                     "type": "string"
                 },
                 "first_name": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 30,
+                    "minLength": 2
                 },
                 "gender": {
-                    "type": "string"
+                    "type": "string",
+                    "enum": [
+                        "male",
+                        "female"
+                    ]
                 },
                 "id": {
                     "type": "integer"
                 },
                 "last_name": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 30,
+                    "minLength": 2
                 },
                 "password": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 16,
+                    "minLength": 6
                 },
                 "phone_number": {
                     "type": "string"
@@ -1762,7 +1766,11 @@
                     "type": "string"
                 },
                 "type": {
-                    "type": "string"
+                    "type": "string",
+                    "enum": [
+                        "user",
+                        "superadmin"
+                    ]
                 },
                 "username": {
                     "type": "string"
