# api/models/user.go
@@ -2,15 +2,15 @@ package models
 
 type User struct {
 	ID              int64  `json:"id"`
-	FirstName       string `json:"first_name"`
-	LastName        string `json:"last_name"`
+	FirstName       string `json:"first_name" binding:"required,min=2,max=30"`
+	LastName        string `json:"last_name" binding:"required,min=2,max=30"`
 	PhoneNumber     string `json:"phone_number"`
-	Password        string `json:"password"`
-	Email           string `json:"email"`
-	Gender          string `json:"gender"`
+	Email           string `json:"email" binding:"required,email"`
+	Gender          string `json:"gender" binding:"oneof=male female"`
 	Username        string `json:"username"`
 	ProfileImageUrl string `json:"profile_image_url"`
-	Type            string `json:"type"`
+	Type            string `json:"type" binding:"required,oneof=user superadmin"`
+	Password        string `json:"password" binding:"required,min=6,max=16"`
 	CreatedAt       string `json:"created_at"`
 }
 
@@ -22,7 +22,7 @@ type CreateUserRequest struct {
 	Gender          string `json:"gender" binding:"oneof=male female"`
 	Username        string `json:"username"`
 	ProfileImageUrl string `json:"profile_image_url"`
-	Type            string `json:"type" binding:"required,oneof=user admin superadmin"`
+	Type            string `json:"type" binding:"required,oneof=user superadmin"`
 	Password        string `json:"password" binding:"required,min=6,max=16"`
 }
 
